# NiftyLittlePenguin

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  run_on_drive.ipynb  setup.sh
.github/workflows/: github-ci.yml
inference_service/: serve.py
niftylittlepenguin/qa/: config.py  constants.py  dataset.py  encode_data.py  inference.py  metrics.py  model.py  offset_mapping.py  read_data.py  train.py
niftylittlepenguin/shared/: download.py  offset_mapping.py  profiling.py  utils.py
notebooks/: qa-playground.ipynb
notebooks/.ipynb_checkpoints/: qa-playground-checkpoint.ipynb
tests/: test_niftylittlepenguin.py
tests/qa/: test_encode_data.py  test_metrics.py  test_qa_offset_mapping.py
tests/shared/: test_shared_offset_mapping.py
