[tool.poetry]
name = "NiftyLittlePenguin"
version = "0.1.0"
description = ""
authors = ["Jannis Spiekermann <janniss@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.26.0"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.12.0"
ipykernel = "^6.21.1"
ipython = "^8.9.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true