[tool.poetry]
name = "NiftyLittlePenguin"
version = "0.1.0"
description = ""
authors = ["Jannis Spiekermann <janniss@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.26.0"
torch = "^1.13.1"
pytorch-lightning = "^1.9.1"
tensorboard = "^2.12.0"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.12.0"
ipykernel = "^6.21.1"
ipython = "^8.9.0"
jupyterlab = "^3.6.1"
line-profiler = "^4.0.2"
isort = "^5.10.1"
pylint = "^2.15.2"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true